feat: 예외처리 Validation 설정