@@ -1,12 +1,17 @@
 package com.example.dmaker.controller;
 
+import com.example.dmaker.dto.CreateDeveloper;
 import com.example.dmaker.service.DmakerService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
+import javax.validation.Valid;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -22,11 +27,14 @@ public class DmakerController {
         return Arrays.asList("snow", "elsa", "olaf");
     }
 
-    @GetMapping("/create-developers")
-    public List<String> createDevelopers() {
-        dmakerService.createDeveloper();
+    @PostMapping("/create-developers")
+    public List<String> createDevelopers(
+            @Valid @RequestBody CreateDeveloper.Request request
+            ) {
+        log.info("request : " + request);
+        dmakerService.createDeveloper(request);
 
-        return List.of("Olaf");
+        return Collections.singletonList("Olaf");
     }
 
 }
